# porland_ai

./: .env  Inital Evaluation Results.md  README.md  agent.py  app.py  database.py  db_agent.py  prompts.py  pyproject.toml  run_cli.py  run_evaluation.py
evaluation/: initial_iteration_results.md  kebony_results.json
evaluation/20250911/: iteration_20250911.md  questions.py  taster_evaluation_results_20250911.json
evaluation/20250919/: evaluation_results_20250919.json  evaluation_results_20250919.md  iteration_20250919.md  taster_evaluation_results_20250919_w_agent_context.json  taster_evaluation_results_20250919_w_agent_context.md  taster_evaluation_results_20250919_w_context.json
evaluation/20250919/results/: patient21_evaluation_results_20250919_w_agent_context.json  patient21_evaluation_results_20250919_w_agent_context.md  patient21_evaluation_results_20250919_w_context.json  patient21_evaluation_results_20250919_w_context.md  patient21_evaluation_results_20250919_wo_context.json  patient21_evaluation_results_20250919_wo_context.md  taster_evaluation_results_20250919_w_agent_context.json  taster_evaluation_results_20250919_w_agent_context.md  taster_evaluation_results_20250919_w_context.md  taster_evaluation_results_20250919_wo_context.json  taster_evaluation_results_20250919_wo_context.md
